--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "4.29.3",
     "localforage": "1.10.0",
     "match-sorter": "6.3.1",
     "react": "^18.2.0",
